# Web-GPU-playground

./: Cargo.toml
src/: fourier.wgsl  main.rs  raytracer.wgsl
