[package]
name = "web_gl_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
futures-intrusive = "0.5.0"
